Bold and Italic: when clicked, wrap the selected text inside ** ** or * *

--- a/write.html
+++ b/write.html
@@ -51,13 +51,13 @@
     <!-- Text Area -->
     <div class="textarea-outer">
       <!-- Important that first child is icon-group and second child is text-area -->
-      <div class="textarea-icon-group">
+      <div id="textarea-icon-group">
         <div class="btn-group">
-            <button class="btn" type="button" title="Bold">
+            <button class="btn" id="bold" type="button" title="Bold">
               <b class="textarea-i-bold">B</b>
             </button>
 
-            <button class="btn" type="button" title="Italic">
+            <button class="btn" id="italic" type="button" title="Italic">
               <i class="textarea-i-italic">I</i>
             </button>
 
