Refractor for textarea. Shun contenteditable div

--- a/write.html
+++ b/write.html
@@ -139,7 +139,7 @@
 
       <div class="clearfix"></div>
 
-      <div id="textarea-div" contenteditable> </div>
+      <textarea id="textarea-div"></textarea>
 
       <div id="text-disp-div"> </div>
 
