Quote >. Also change font and line height of icon area

--- a/write.html
+++ b/write.html
@@ -58,11 +58,11 @@
             </button>
 
             <button class="btn" id="italic" type="button" title="Italic">
-              <i class="textarea-i-italic">I</i>
+              <i class="textarea-i-italic"><b>I</b></i>
             </button>
 
-            <button class="btn" type="button" title="Underline">
-              <u class="textarea-i-underline">U</u>
+            <button class="btn" id="quote" type="button" title="Quote">
+              <span class="textarea-i-quote fa fa-quote-left"></span>
             </button>
 
             <button class="btn" type="button" title="Strike">
