line break, any number of it

--- a/write.html
+++ b/write.html
@@ -91,7 +91,7 @@
               <b class="textarea-i-sigma">	&Sigma; </b>
             </button>
 
-            <button class="btn" type="button" title="Line Break">
+            <button class="btn" id="br" type="button" title="Line Break">
               <span class="textarea-i-br">br</span>
             </button>
 
