Horizontal rule. Make quote code more readable

--- a/write.html
+++ b/write.html
@@ -95,7 +95,7 @@
               <span class="textarea-i-br">br</span>
             </button>
 
-            <button class="btn" type="button" title="Horizontal Rule">
+            <button class="btn" id="rule" type="button" title="Horizontal Rule">
               <span class="textarea-i-hrule fa fa-arrows-h"></span>
             </button>
 
