Code after 4 spaces. Also quote small modification

--- a/write.html
+++ b/write.html
@@ -83,7 +83,7 @@
               <span class="textarea-i-quote fa fa-quote-left"></span>
             </button>
 
-            <button class="btn" type="button" title="Code">
+            <button class="btn" id="code" type="button" title="Code">
               <span class="textarea-i-code" style="margin-top:-3px;">{ }</span>
             </button>
 
