Code inline + unquote

--- a/write.html
+++ b/write.html
@@ -67,11 +67,11 @@
               <i class="textarea-i-italic">I</i>
             </button>
 			            
-			<button class="btn" type="button" title="Unordered-List">
+			<button class="btn" id="list0" type="button" title="Unordered-List">
               <span class="textarea-i-ul fa fa-list-ul"></span>
             </button>
 
-            <button class="btn" type="button" title="Ordered-List">
+            <button class="btn" id="list1" type="button" title="Ordered-List">
               <span class="textarea-i-ul fa fa-list-ol"></span>
             </button>
 
@@ -84,9 +84,13 @@
             </button>
 
             <button class="btn" id="code" type="button" title="Code">
-              <span class="textarea-i-code" style="margin-top:-3px;">{ }</span>
+              <b class="textarea-i-code" style="margin-top:-2px;">{ }</b>
             </button>
 
+			<button class="btn" id="code-inline" type="button" title="Code Inline">
+              <b class="textarea-i-code">< ></b>
+            </button>
+			
             <button class="btn" type="button"  title="Latex Math">
               <b class="textarea-i-sigma">	&Sigma; </b>
             </button>
@@ -109,10 +113,6 @@
 
             <button class="btn" type="button" title="Align Center">
               <span class="textarea-i-align fa fa-align-center"></span>
-            </button>
-
-            <button class="btn" type="button" title="Align Right">
-              <span class="textarea-i-align fa fa-align-right"></span>
             </button>
 
         </div>
