Font awesome icons for Bold, Italic and Heading

--- a/write.html
+++ b/write.html
@@ -56,15 +56,15 @@
 			
 			<!-- Warning: The The depth shouldn't be larger than 2. Then the event.target in js will break -->
 			<button class="btn" id="heading" type="button" title="Heading">
-              <b class="textarea-i-h">H</b>
+              <span class="textarea-i-h fa fa-header"></span>
             </button>
 			
             <button class="btn" id="bold" type="button" title="Bold">
-              <b class="textarea-i-bold">B</b>
+              <span class="textarea-i-bold fa fa-bold"></span>
             </button>
 
             <button class="btn" id="italic" type="button" title="Italic">
-              <i class="textarea-i-italic">I</i>
+              <span class="textarea-i-italic fa fa-italic"></span>
             </button>
 			            
 			<button class="btn" id="list0" type="button" title="Unordered-List">
