Allow cross lists. That is unordered list as child of an ordered list. Also change code inline to terminal

--- a/write.html
+++ b/write.html
@@ -87,8 +87,8 @@
               <b class="textarea-i-code" style="margin-top:-2px;">{ }</b>
             </button>
 
-			<button class="btn" id="code-inline" type="button" title="Code Inline">
-              <b class="textarea-i-code">< ></b>
+			<button class="btn" id="terminal" type="button" title="Terminal">
+              <span class="textarea-i-code fa fa-terminal"></span>
             </button>
 			
             <button class="btn" type="button"  title="Latex Math">
