Add Latex buttons. Both inline and math mode

--- a/write.html
+++ b/write.html
@@ -67,11 +67,11 @@
               <span class="textarea-i-italic fa fa-italic"></span>
             </button>
 			            
-			<button class="btn" id="list0" type="button" title="Unordered-List">
+			<button class="btn" id="list0" type="button" title="Bullet-List">
               <span class="textarea-i-ul fa fa-list-ul"></span>
             </button>
 
-            <button class="btn" id="list1" type="button" title="Ordered-List">
+            <button class="btn" id="list1" type="button" title="Number-List">
               <span class="textarea-i-ul fa fa-list-ol"></span>
             </button>
 
@@ -91,16 +91,20 @@
               <span class="textarea-i-code fa fa-terminal"></span>
             </button>
 			
-            <button class="btn" type="button"  title="Latex Math">
-              <b class="textarea-i-sigma">	&Sigma; </b>
+            <button class="btn" id="Math" type="button"  title="Latex Math">
+              <b class="textarea-i-sigma" style="font-size:19px; position:relative; top:-3px;">	&Sigma; </b>
             </button>
-
+			
             <button class="btn" id="br" type="button" title="Line Break">
               <span class="textarea-i-br">br</span>
             </button>
 
             <button class="btn" id="rule" type="button" title="Horizontal Rule">
               <span class="textarea-i-hrule fa fa-arrows-h"></span>
+            </button>
+			
+			<button class="btn" id="math" type="button"  title="Latex Inline">
+              <b class="textarea-i-sigma">	&Sigma; </b>
             </button>
 
 
