Add github-markdown.css for github like styling of blog

--- a/write.html
+++ b/write.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" type="text/css" href="font-awesome/css/font-awesome.min.css"/>
   <link rel="stylesheet" type="text/css" href="textarea_style.css"/>
   <link rel="stylesheet" type="text/css" href="blog_style.css"/>
+  <link rel="stylesheet" type="text/css" href="github-markdown.css"/>
   <link rel="stylesheet" type="text/css" href="katex/katex.min.css"/>
 
   <title>Write Blog in Markdown</title>
@@ -141,7 +142,7 @@
 
       <textarea id="textarea-div"></textarea>
 
-      <div id="text-disp-div"> </div>
+      <div id="text-disp-div" class="markdown-body"> </div>
 
     </div>
     </div>
