Link without prompt. Let user select and press the link icon

--- a/write.html
+++ b/write.html
@@ -123,7 +123,7 @@
               <div class="textarea-i-square" style="width:30px;margin-top:-1px">Draw</div>
             </button>
 			
-			<button class="btn" type="button" title="Image">
+			<button class="btn" id="image" type="button" title="Image">
               <div class="textarea-i-image fa fa-image"></div>
             </button>
 
