--- a/write.html
+++ b/write.html
@@ -20,7 +20,7 @@
   <div class="navbar navbar-default">
 	<div class="container">	
 		<div class="navbar-header">
-			<a class="navbar-brand" href="kerala.html">
+			<a class="navbar-brand" href="http://cslab.org">
 			  <img alt="Brand" src="gauss.png">
 			  CS_Lab
 			</a>
