--- a/write.html
+++ b/write.html
@@ -120,7 +120,7 @@
             </button>
 			
 			<button class="btn" type="button" title="Paint">
-              <div class="textarea-i-square" style="width:30px;margin-top:-1px">Draw</div>
+              <div class="textarea-i-square" data-toggle="modal" data-target="#myModalHorizontal" style="width:30px;margin-top:-1px">Draw</div>
             </button>
 			
 			<button class="btn" id="image" type="button" title="Image">
@@ -149,6 +149,8 @@
 </div>
 </div>
 </div>
+
+
 
     
 <script type="text/javascript" src="katex/katex.min.js"></script>
