focus the input area when Draw is clicked. Remove the focus glow

--- a/write.html
+++ b/write.html
@@ -142,7 +142,7 @@
           <span class="sr-only">Close</span> <!-- screen reader only. Irony -->
         </button>
 
-        Data URL: <input id="draw-url-input"></input>
+        Data URL: <input id="draw-input-area"></input>
 
         <button id="data-url-btn" type="button" class="btn btn-xs">OK</button>
 
