Add the fa icon  for align-center. Also imitate bold functionality in javascript

--- a/write.html
+++ b/write.html
@@ -99,6 +99,10 @@
             <button class="btn" id="br" type="button" title="Line Break">
               <span class="textarea-i-br">br</span>
             </button>
+            
+            <button class="btn" id="center" type="button" title="Align Center">
+              <span class="textarea-i-align fa fa-align-center"></span>
+            </button>
 
             <button class="btn" id="rule" type="button" title="Horizontal Rule">
               <span class="textarea-i-hrule fa fa-arrows-h"></span>
@@ -116,11 +120,11 @@
         <div class="btn-group float-right">  
           	
             <button class="btn" id="table" type="button" title="Table">
-              <span class="textarea-i-align fa fa-table"></span>
+              <span class="textarea-i-table fa fa-table"></span>
             </button>
 			
 			<button class="btn" id="draw" type="button" title="Paint">
-              <div class="textarea-i-square" data-toggle="modal" data-target="#myModalHorizontal" style="width:30px;margin-top:-1px">Draw</div>
+              <div class="textarea-i-square" style="width:30px;margin-top:-1px">Draw</div>
             </button>
 			
 			<button class="btn" id="image" type="button" title="Image">
