Basic styling of copy to clipboard button

--- a/write.html
+++ b/write.html
@@ -99,7 +99,7 @@
             <button class="btn" id="br" type="button" title="Line Break">
               <span class="textarea-i-br">br</span>
             </button>
-            
+
             <button class="btn" id="center" type="button" title="Align Center">
               <span class="textarea-i-align fa fa-align-center"></span>
             </button>
@@ -156,7 +156,12 @@
 
       <textarea id="textarea-div"></textarea>
 
-      <div id="text-disp-div" class="markdown-body"> </div>
+      <div id="clipboard-div">
+        <button id="clipboard-btn">Copy HTML to Clipboard</button>
+      </div>
+
+      <div id="text-disp-div" class="markdown-body">
+      </div>
 
     </div>
     </div>
