Copy to clipboard functionality

--- a/write.html
+++ b/write.html
@@ -160,8 +160,10 @@
         <button id="clipboard-btn">Copy HTML to Clipboard</button>
       </div>
 
-      <div id="text-disp-div" class="markdown-body">
-      </div>
+      <div id="text-disp-div" class="markdown-body"></div>
+
+      <!-- A hidden textarea to be used as a clipboard container - doesn't work. It has to be visible
+      <textarea id="clip-text-area" class="disabled"></textarea> -->
 
     </div>
     </div>
