marked.js linked directly from CDN link; pic changed to code.png

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 	<div class="container">	
 		<div class="navbar-header">
 			<a class="navbar-brand" href="http://cslab.org">
-			  <img alt="Brand" src="gauss.png">
-			  CS_Lab
+			  <img alt="Brand" src="code.png">
+			  Markdown Editor
 			</a>
 			
 		</div>
@@ -185,7 +185,7 @@ Auto-render: This extension exposes a single function, window.renderMathInElemen
 function renderMathInElement(elem, options)
 -->
 
-<script type="text/javascript" src="marked.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 <script type="text/javascript" src="writedown.js"></script>
 
 </body>
